Agrege el footer y quite un error abajo del body

--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@ escribir lo que deseas mostrar en la página: texto, enlaces, imágenes …
 	</article>
 </section>
 
+<footer>
+
+	<p><strong>hecho por Hector</strong></p>
+
+	<p>Ugm.com 2014</p>
+
+	</footer>
 </body>
-<div id="page-wrap">kent_11_12@hotmail.com</div>
-        <div id="footer">Hector Hernandez Castillo</div>
+
 </html>
