--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ escribir lo que deseas mostrar en la página: texto, enlaces, imágenes …
 
 	<p>Ugm.com 2014</p>
 
+	<audio src="strove.mp3" autoplay>
+
+</audio>
+
 	</footer>
 </body>
 
