--- a/index.html
+++ b/index.html
@@ -1,60 +1,63 @@
 <!DOCTYPE html>
 <html lang="es">
- <head>
-<meta charset="utf-8" />
-<title> Mi primera App WEB </title>
-</head>
+	<head>
+		<meta charset="utf-8" />
+		<title>Mi Primera App WEB</title>
+		<link rel="stylesheet" href="css/normalize.css" />
+		<link rel="stylesheet" href="css/estilo1.css" />
+	</head>
 <body>
-<header>
-	<figure>
-		<img src="img/logo.png" />
-    </figure>
-	<h1>Solo para gamer zombies y con laptopd de alto desempeño </h1>
-	<figure>
-		<img src="img/avatar2.jpg" />
-	</figure>
-</header>
-<nav>
-	<ul>
-		<li><a href="#">PS4</a></li>
-		<li><a href="#">Xbox One</a></li>
-		<li><a href="#">Nintendo</a></li>
-		<li><a href="#">PcGamer</a></li>
-		<li><a href="#">SteamOs</a></li>
-		<li><a href="#">login</a></li>
-	</ul>
-</nav>
-<section>
-	<article>
-		<figure>
-			<img src="img/destiny_mid_img4.jpg" />
+	<header>
+		<figure id="logo">
+			<img src="img/logo.png" />
 		</figure>
-		<h2><p>EXCLUSIVA</p></h2>
+		<h1>Solo para gamer zombies y con laptopd de alto desempeño</h1>
+		<figure id="avatar">
+			<img src="img/avatar2.jpg">
+		</figure>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="#">PS4</a></li>
+			<li><a href="#">Xbox One</a></li>
+			<li><a href="#">Nintendo</a></li>
+			<li><a href="#">PcGamer</a></li>
+			<li><a href="#">SteamOs</a></li>
+			<li id="login"><a href="#">login</a></li>
+		</ul>
+	</nav>
+	<section id="contenido">
+		<article class="art">
+			<figure class="imagen-art"> 
+				<img src="img/destiny_mid_img4.jpg" />
+			</figure>
+
+			<h2 class="cinta-art"><p>EXCLUSIVA</p></h2>
+
 		<div>
-			<h2>DESTINY</h2>
-			<h2>DESTINY LO NUEVO PS4 Y XBOX ONE</h2>
+			<h2 class="titulo-art">DESTINY</h2>
+			<h2 class="titulo2-art">DESTINY LO NUEVO PARA PS4 Y XBOX ONE</h2>
 		</div>
-		<div>
-			<p>HTML (HyperText Markup Language): apareció por primera vez en 1991 en el lanzamiento
-de la Web. Su función es la gestión y organización del contenido. Así que en HTML puedes
-escribir lo que deseas mostrar en la página: texto, enlaces, imágenes …
-            </p>
+		<div class="texto">
+			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
+
+				por:<a href="#">Héctor</a>
+
+			</p>
 		</div>
-		
-	</article>
-</section>
 
-<footer>
+		</article>
+	</section>
 
-	<p><strong>hecho por Hector</strong></p>
 
-	<p>Ugm.com 2014</p>
-
-	<audio src="strove.mp3" autoplay>
-
-</audio>
-
+	<footer>
+		<p>
+			<strong>Hecho por Hector</strong>
+		</p>
+		<p>kent_11_12@hotmail.com 2014</p>
 	</footer>
-</body>
 
+	<audio src="strove.mp3" autoplay> </audio>
+
+</body>
 </html>
