--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
 		</div>
 		<div class="texto">
 			<p>Destiny is an action game from the creators of Halo, set in a mysterious future. Create a unique and powerful character, customize the way you look and fight, and explore what remains of our solar system.  
-
-				por:<a href="#">Héctor</a>
-
 			</p>
+				<p>Publicado por:<a href="#">Héctor</a></p>
+			
 		</div>
 
 		</article>
@@ -54,10 +53,8 @@
 		<p>
 			<strong>Hecho por Hector</strong>
 		</p>
-		<p>kent_11_12@hotmail.com 2014</p>
+		<p><a href="#">kent_11_12@hotmail.com</a></p>
 	</footer>
-
-	<audio src="strove.mp3" autoplay> </audio>
 
 </body>
 </html>
